# hooked-rs

./: .gitignore  Cargo.toml  README.md  example.yml
src/: builder.rs  config.rs  handler.rs  hook_handler.rs  job.rs  main.rs  queue.rs  signature.rs
