[package]
name = "hooked-rs"
version = "0.1.0"
authors = ["Sam Jeston <sam.jeston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.53"
log = "0.4.8"
simplelog = "^0.7.6"
rand = "0.7.3"
base64 = "0.12.0"
duct = "0.13.4"
ring = "0.13.5"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
